Update procedure for v5.2+

--- a/app/procedure.html
+++ b/app/procedure.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<title>Admin - IRG Online Review Tool</title>
+<title>Procedure for Working Set - IRG Online Review Tool</title>
 <meta charset=utf-8>
+<meta name=viewport content="width=device-width">
 <style>
 body{margin:10px;font-family:Arial, sans-serif}
 main{margin:10px auto;max-width:1024px}
@@ -8,36 +9,38 @@ main{margin:10px auto;max-width:1024px}
 
 <main>
 <h2>Procedure for Working Set</h2>
-<h3>COVID-19 flow</h3>
+<h3>COVID-19 flow (v5.2+)</h3>
 <ol>
 	<li>Reviewers submit comments.</li>
 	<li>Reviewers respond to comments.</li>
-	<li>Online tool manager exports Consolidated Comments.</li>
+	<li>Online tool manager exports <u>Consolidated Comments</u>.</li>
 	<li>Chief Editor applies changes on the online tool based on Consolidated Comments.</li>
-	<li>Online tool manager exports Change Log.</li>
-	<li>Online tool manager generates new charts.</li>
+	<li>Online tool manager exports <u>Change Log</u>.</li>
+	<li>Online tool manager generates new <u>Charts</u>.</li>
 </ol>
-<h3>COVID-19 flow (old)</h3>
+<div style="color:#999">
+<h3>COVID-19 flow (old, v5.1) <span style="color:black">[Retired Flow 已棄用程序]</span></h3>
 <ol>
 	<li>Reviewers submit comments.</li>
 	<li>Reviewers respond to comments.</li>
-	<li>Online tool manager exports Consolidated Comments.</li>
-	<li>Online tool manager exports Excel file for Chief Editor.</li>
+	<li>Online tool manager exports <u>Consolidated Comments</u>.</li>
+	<li>Online tool manager exports <u>Excel file</u> for Chief Editor.</li>
 	<li>Chief Editor updates Excel file based on Consolidated Comments.</li>
 	<li>Online tool manager imports changes into tool.</li>
-	<li>Online tool manager exports Change Log.</li>
-	<li>Online tool manager generates new charts.</li>
+	<li>Online tool manager exports <u>Change Log</u>.</li>
+	<li>Online tool manager generates new <u>Charts</u>.</li>
 </ol>
-<h3>Normal flow</h3>
+</div>
+<h3>Normal flow (v6.0+)</h3>
 <ol>
 	<li>Reviewers submit comments.</li>
 	<li>Reviewers respond to comments.</li>
-	<li>Online tool manager exports Consolidated Comments.</li>
+	<li>Online tool manager exports <u>Consolidated Comments</u>.</li>
 	<li>IRG Meeting takes place and Discussion Records are recorded.</li>
 	<li>Online tool manager applies preliminary changes on the online tool based on Discussion Record.</li>
-	<li>Online tool manager exports Discussion Record with Change Log for Chief Editor.</li>
+	<li>Online tool manager exports <u>Discussion Record with Change Log</u> for Chief Editor.</li>
 	<li>Chief Editor applies additional changes on the online tool based on the Discussion Record and Change Log.</li>
-	<li>Online tool manager exports Change Log.</li>
-	<li>Online tool manager generates new charts.</li>
+	<li>Online tool manager exports <u>Change Log</u>.</li>
+	<li>Online tool manager generates new <u>Charts</u>.</li>
 </ol>
 </main>
